# JAM-IM

./: CMakeLists.txt  README.md
libs/jamim/: CMakeLists.txt
libs/jamim/include/jamim/: Client.hpp  Message.hpp  Server.hpp
libs/jamim/src/: Client.cpp  Message.cpp  Server.cpp
libs/jamim/test/: CMakeLists.txt  ClientTests.cpp  MessageTests.cpp  ServerTests.cpp
src/: client.cpp  server.cpp
test/: CMakeLists.txt
